--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<a href="books.html" target="_blank"><span class="nav-icon4"> </span><label>Books</label></a>
 					</div>
 					<div class="col-md-4 about-nav4">
-						<a href="https://user.qzone.qq.com/2512330485" target="_blank"><span class="nav-icon4"> </span><label>Blog</label></a>
+						<a href="https://music.163.com/#/user/home?id=1711104550" target="_blank"><span class="nav-icon4"> </span><label>Blog</label></a>
 						<!-- <a href=""><span class="nav-icon5"> </span><label>Dormitory</label></a> -->
 					</div>
 					<div class="clearfix"> </div>
